Remove unused divs in header

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <div class="navigation-right">
             <nav role="navigation" class="nav-menu w-nav-menu">
               <a href="/case-study" class="link-block w-inline-block">
-                <div>Case Study</div>
+                Case Study
               </a>
               <a href="/team" class="link-block w-inline-block">
-                <div>Team</div>
+                Team
               </a>
             </nav>
             <div class="login-buttons">
