--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html data-wf-page="5f71dd169010d6326b65485d">
   <head>
     <meta charset="utf-8">
-    <title>Try Horus</title>
+    <title>Horus</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik:wght@500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik:wght@500&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:regular,500,600,700"]  }});</script>
     <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
     <link href="assets/images/logo-color.png" rel="shortcut icon" type="image/x-icon">
     <link href="assets/images/logo-color.png" rel="apple-touch-icon">
     <script src="https://kit.fontawesome.com/d019875f94.js" crossorigin="anonymous"></script>
-    <meta name="image" property="og:image" content="assets/images/abstract-service-pic.png" />
+    <meta name="image" property="og:image" content="assets/images/horus_description_meta.png" />
   </head>
   <body>
     <div class="navigation-wrap">
@@ -79,7 +79,7 @@
                     <div class="primary-button-text">Try It Out</div>
                   </a>
                 </div>
-                <div class="tab-image-wrap"><img src="assets/images/Storage and Querying.png" loading="lazy" alt=""></div>
+                <div class="tab-image-wrap"><img src="assets/images/horus_description_website.png" loading="lazy" alt=""></div>
               </div>
             </div>
           </div>
