added LI links to team pages

--- a/case-study.html
+++ b/case-study.html
@@ -840,7 +840,7 @@
                         </li>
                         <li>
                           <!-- Add linked in for RM-->
-                          <a href=" www.linkedin.com/in/richard-w-m" target="_blank">
+                          <a href="https://www.linkedin.com/in/richard-w-m" target="_blank">
                             <span class="team-member-icon">
                               <i class="fab fa-linkedin"></i>
                             </span>
