--- a/team.html
+++ b/team.html
@@ -85,7 +85,7 @@
                   </li>
                   <li>
                     <!-- ADD RM LINKEDIN HERE-->
-                    <a href=" www.linkedin.com/in/richard-w-m" target="_blank">
+                    <a href="https://www.linkedin.com/in/richard-w-m" target="_blank">
                       <span class="team-member-icon">
                         <i class="fab fa-linkedin"></i>
                       </span>
