Change abstract for literal images

--- a/case-study.html
+++ b/case-study.html
@@ -21,10 +21,10 @@
         (n.className += t + "touch");
     })(window, document);
   </script>
-  <link href="assets/images/logo-color.png" rel="shortcut icon" type="image/x-icon" />
-  <link href="assets/images/logo-color.png" rel="apple-touch-icon" />
+  <link href="assets/images/horus_logo_color.png" rel="shortcut icon" type="image/x-icon" />
+  <link href="assets/images/horus_logo_color.png" rel="apple-touch-icon" />
   <script src="https://kit.fontawesome.com/d019875f94.js" crossorigin="anonymous"></script>
-  <meta name="image" property="og:image" content="assets/images/abstract-service-pic.png" />
+  <meta name="image" property="og:image" content="assets/images/horus_description_meta.png" />
 </head>
 
 <body>
@@ -33,7 +33,7 @@
       <div class="navigation-container">
         <div class="navigation-left">
           <a href="/" aria-current="page" class="brand w-nav-brand w—current" aria-label="home">
-            <img src="assets/images/horus_logo color.png" alt="" class="template-logo" />
+            <img src="assets/images/horus_logo_color.png" alt="" class="template-logo" />
           </a>
         </div>
         <div class="navigation-right">
@@ -435,11 +435,11 @@
         <!-- Section 5 -->
         <h2 class="h2" id="5">5. Horus Architecture</h2>
         <p>
-          Horus has four distinct but interrelated components: the <code>horus-agent</code>, connector, database, and UI. We wanted to develop an end-to-end observability tool, which means all the way from generating metrics and traces to a UI where the user can visualize them.  
+          Horus has four distinct but interrelated components: the <code>horus-agent</code>, connector, database, and UI. We wanted to develop an end-to-end observability tool, which means all the way from generating metrics and traces to a UI where the user can visualize them.
         </p>
         <figure>
           <img src="assets/images/case-study/generic-full-horus.png" class="case-study-image" />
-          <figcaption>The full Horus infrastrcture + Horus instrumented in a microservice application</figcaption>
+          <figcaption>Horus instrumented in a microservice application + the full Horus infrastructure</figcaption>
         </figure>
         <br>
         <h4>5.1 Horus Agent</h4>
@@ -790,7 +790,7 @@
         <!-- Section 8 -->
         <h2 class="h2" id="9">9. References</h2>
         <ol>
-          <li class="reference"> https://en.wikipedia.org/wiki/Telemetry </li>
+          <li class="reference first"> https://en.wikipedia.org/wiki/Telemetry </li>
           <li class="reference"> Software Telemetry, Jamie Riedesel, 2021</li>
           <li class="reference"> https://signoz.io/blog/jaeger-vs-prometheus/</li>
           <li class="reference"> https://blog.timescale.com/blog/timescaledb-vs-influxdb-for-time-series-data-timescale-influx-sql-nosql-36489299877/</li>
