--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script type="text/javascript">WebFont.load({  google: {    families: ["Inter:regular,500,600,700"]  }});</script>
     <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-    <link href="assets/images/logo-color.png" rel="shortcut icon" type="image/x-icon">
-    <link href="assets/images/logo-color.png" rel="apple-touch-icon">
+    <link href="assets/images/horus_logo_color.png" rel="shortcut icon" type="image/x-icon">
+    <link href="assets/images/horus_logo_color.png" rel="apple-touch-icon">
     <script src="https://kit.fontawesome.com/d019875f94.js" crossorigin="anonymous"></script>
     <meta name="image" property="og:image" content="assets/images/horus_description_meta.png" />
   </head>
@@ -22,7 +22,7 @@
         <div class="navigation-container">
           <div class="navigation-left">
             <a href="/" aria-current="page" class="brand w-nav-brand w--current" aria-label="home">
-              <img src="assets/images/horus_logo color.png" alt="" class="template-logo">
+              <img src="assets/images/horus_logo_color.png" alt="" class="template-logo">
             </a>
           </div>
           <div class="navigation-right">
